# artifact-alchemy

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: developer_guide.md  release_guide.md  user_guide.md
examples/: complex_project.md  nested_structure.md  simple_usage.md
scripts/: response.txt  test_claude_prompt.py
src/: lib.rs  main.rs
tests/: integration_tests.rs
